--- a/styles/photographer.css
+++ b/styles/photographer.css
@@ -204,6 +204,13 @@ header {
 }
 
 .sort-by__select {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   color: white;
   background-color: #901C1C;
   padding: 14px;
