--- a/styles/photographer.css
+++ b/styles/photographer.css
@@ -176,6 +176,7 @@ header {
   background: url(../images/icons/x-vector.svg);
   font-size: 2.625em;
   cursor: pointer;
+  z-index: 99;
 }
 
 #photographer-form .input-error {
@@ -187,6 +188,19 @@ header {
   color: #901C1C;
   font-weight: 700;
   margin: 10px 0 0 0;
+}
+
+#photographer-form .form-validation {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #DB8876;
+  border-radius: 5px;
+  font-size: 3em;
+  text-align: center;
 }
 
 .sort-by {
@@ -348,6 +362,8 @@ header {
       -ms-flex-align: center;
           align-items: center;
   justify-self: right;
+  text-decoration: none;
+  color: #901C1C;
 }
 
 /* LIGHTBOX */
