--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -150,6 +150,7 @@ header{
         background: url(../images/icons/x-vector.svg);
         font-size: 2.625em;
         cursor: pointer;
+        z-index: 99;
     }
     .input-error{
         border: 3px solid $primary-color;
@@ -159,6 +160,18 @@ header{
         color: $primary-color;
         font-weight: 700;
         margin: 10px 0 0 0;
+    }
+    .form-validation{
+        display: none;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: $bg-color;
+        border-radius: 5px;
+        font-size: 3em;
+        text-align: center;
     }
 }
 
@@ -272,6 +285,8 @@ header{
                 display: flex;
                 align-items: center;
                 justify-self: right;
+                text-decoration: none;
+                color: $primary-color;
             }
         }
     }
