--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -455,7 +455,7 @@ header{
     }
     
     /* LIGHTBOX */
-    .lightbox__figure-figcaption{
+    .lightbox__figure-figcaption, .lightbox__video-title{
         font-size: 0.875em;
     }
     .lightbox{
