--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -352,6 +352,12 @@ header{
     }
 }
 
+/* FOCUS */
+
+*:-moz-focusring{
+    outline: 3px solid black;
+}
+
 /* MEDIAS QUERIES */
 
 @media (max-width: 1024px){
