--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 @import './variables';
 
+
 /* BODY */
 
 body{
@@ -138,6 +139,12 @@ h1{
         padding: 0;
         margin: 6px 0 0 0;
     }
+}
+
+/* FOCUS */
+
+*:-moz-focusring{
+    outline: 3px solid black;
 }
 
 /* MEDIAS QUERIES */
