--- a/styles/photographer.css
+++ b/styles/photographer.css
@@ -440,8 +440,9 @@ header {
 }
 
 /* FOCUS */
-*:-moz-focusring {
-  outline: 3px solid black;
+*:focus-visible {
+  outline: 4px solid black;
+  outline-offset: .6rem;
 }
 
 /* MEDIAS QUERIES */
