--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,8 +178,9 @@ h1 {
 }
 
 /* FOCUS */
-*:-moz-focusring {
-  outline: 3px solid black;
+*:focus-visible {
+  outline: 4px solid black;
+  outline-offset: .6rem;
 }
 
 /* MEDIAS QUERIES */
